<resources>
    <string name="app_name">Cards</string>
    <string name="download">Download lessons</string>
    <string name="download_file">Download:</string>
    <string name="google_error">Google Error</string>
    <string name="item">item</string>
    <string name="items">items</string>
    <string name="menu_settings">Settings</string>
    <string name="plus">Increase Font</string>
    <string name="minus">Decrease Font</string>
    <string name="menu_exit">Exit</string>
    <string name="parentDirectory">..</string>
    <string name="search">Search</string>
    <string name="select_account">Select Google Account…</string>
    <string name="upload">Upload lessons</string>
    <string name="upload_success">Upload success</string>
    <string name="uploading">Uploading...</string>
    <string name="upload_fault">Upload fault</string>
    <string name="open_folder">Open folder</string>
    <string name="open_file">Open file</string>
    <string name="select_lesson">Select lesson</string>
    <string name="open_lesson">Open lesson</string>
    <string name="open_verb">Verb Familie</string>
    <string name="open_subst">Subst Familie</string>
    <string name="open_study">Open Study</string>
    <string name="open_search_lesson">Search lesson</string>
    <string name="open_search_verb">Search verb</string>
    <string name="open_search_all">Search all</string>
    <string name="open_search_ru_all">Search RU all</string>
    <string name="open_search_ai">Search GPT</string>
    <string name="open_last_lesson">Open last lesson</string>
    <string name="select_language">Select language</string>
    <string name="select_log">Select log file folder</string>
    <string name="edit_word">Edit word</string>
    <string name="preferences">Preferences</string>
    <string name="select_file">Select file</string>
    <string name="select_files">Select files</string>
    <string name="select_directory">Select directory</string>
    <string name="select_google_file">Select Google file</string>
    <string name="irregular_verbs_en">Irregular verbs</string>
    <string name="select_sounds_folder">Select sounds\'s folder</string>
    <string name="grammar">Grammar</string>
    <string name="select_verb">Select verb</string>
    <string name="select_form">Select form</string>
    <string name="select_word">Select word</string>
    <string name="open_form">Verb form</string>
    <string name="sort">Sort</string>
    <string name="shuffle_words">Shuffle</string>
    <string name="restore">Restore</string>
    <string name="create_file">Create File</string>
    <string name="add_item">Add Item</string>
    <string name="combine_files">Combine files</string>
    <string name="google_drive_lessons">Download lessons</string>
    <string name="google_drive_verbs">Download verbs</string>
    <string name="google_drive_subst">Download subst</string>
    <string name="google_drive_irr_verbs">Download irregular verbs</string>
    <string name="google_drive_sounds">Download sounds</string>
    <string name="google_drive_grammar">Download grammar</string>
</resources>