<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/spinnerLevels"
        android:gravity="right"
        android:title="Levels"
        app:actionViewClass="android.widget.Spinner"
        android:background="#ff00"
        app:showAsAction="always" />
    <item
        android:id="@+id/spinnerWords"
        android:gravity="right"
        android:title="Words"
        app:actionViewClass="android.widget.Spinner"
        android:background="#ff00"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_addItemToFile"
        android:gravity="right"
        android:icon="@drawable/plus"
        app:showAsAction="ifRoom"
        android:title="@string/add_item"></item>

    <item
        android:id="@+id/menu_sort"
        android:gravity="right"
        android:icon="@drawable/sort"
        app:showAsAction="ifRoom"
        android:title="@string/sort"></item>
    <item
        android:id="@+id/menu_shuffle_words"
        android:gravity="right"
        android:icon="@drawable/sort"
        app:showAsAction="ifRoom"
        android:title="@string/shuffle_words"></item>
    <item
        android:id="@+id/menu_createFile"
        android:gravity="right"
        android:icon="@drawable/file"
        app:showAsAction="ifRoom"
        android:title="@string/create_file"></item>
    <item
        android:id="@+id/menu_openLastFile"
        android:gravity="right"
        android:icon="@drawable/exit"
        app:showAsAction="ifRoom"
        android:title="@string/open_last_file"></item>
    <item
        android:id="@+id/menu_plus"
        android:gravity="right"
        android:icon="@drawable/plus"
        app:showAsAction="ifRoom"
        android:title="@string/plus"></item>
    <item
        android:id="@+id/menu_minus"
        android:gravity="right"
        android:icon="@drawable/minus"
        app:showAsAction="ifRoom"
        android:title="@string/minus"></item>
    <item
        android:id="@+id/menu_restore"
        android:gravity="right"
        android:icon="@drawable/minus"
        app:showAsAction="ifRoom"
        android:title="@string/restore"></item>
    <item
        android:id="@+id/menu_settings"
        android:gravity="right"
        android:icon="@drawable/settings"
        app:showAsAction="ifRoom"
        android:title="@string/menu_settings"></item>
</menu>
