<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/buttonOpenCards"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:layout_marginRight="20dp"
                android:title="@string/app_name"
                android:background="@drawable/cards" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left|center_vertical"
                android:text="@string/app_name"
                android:textColor="@color/colorWhite"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/buttonOpenVerbCards"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:layout_marginRight="20dp"
                android:title="@string/app_name"
                android:background="@drawable/cards" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left|center_vertical"
                android:text="@string/irregular_verbs_en"
                android:textColor="@color/colorWhite"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/buttonOpenGrammar"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:layout_marginRight="20dp"
                android:title="@string/app_name"
                android:background="@drawable/cards" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left|center_vertical"
                android:text="@string/grammar"
                android:textColor="@color/colorWhite"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/buttonOpenVerbForm"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:layout_marginRight="20dp"
                android:title="@string/app_name"
                android:background="@drawable/cards" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left|center_vertical"
                android:text="@string/open_form"
                android:textColor="@color/colorWhite"
                android:textSize="20dp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
